eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.delavalom.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbd-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.delavalom.com
    secretName: rbd-api-cert
